# medical-bill-auditor

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001ba3e4e90c_initial_schema.py  README
backend/app/: README.md  __init__.py  main.py
backend/app/api/: README.md  __init__.py
backend/app/config/: README.md  __init__.py
backend/app/core/: README.md  __init__.py  config.py  events.py
backend/app/db/: README.md  __init__.py  health.py  session.py
backend/app/dependencies/: README.md  __init__.py
backend/app/models/: README.md  __init__.py  audit_finding.py  audit_report.py  bill_item.py  complaint.py  government_rate.py  hospital.py  medical_bill.py  medicine_reference.py  user.py
backend/app/schemas/: README.md  __init__.py
backend/app/services/: README.md  __init__.py
backend/app/utils/: README.md  __init__.py
backend/tests/: README.md
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  domain-model.md
frontend/: index.html  package.json
frontend/src/: main.tsx  styles.css
