[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-bill-auditor-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the Medical Bill Auditor platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.12.3",
  "pydantic-settings>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
